--- a/.github/workflows/exec.yml
+++ b/.github/workflows/exec.yml
@@ -27,4 +27,4 @@ jobs:
         run: npm run build
 
       - name: Run npm start
-        run: LINE_CHANNEL_ACCESS_TOKEN=${{secrets.LINE_CHANNEL_ACCESS_TOKEN}} LINE_CHANNEL_SECRET=${{secrets.LINE_CHANNEL_SECRET}} npm start
+        run: LINE_CHANNEL_ACCESS_TOKEN=${{secrets.LINE_CHANNEL_ACCESS_TOKEN}} LINE_GROUP_ID=${{secrets.LINE_GROUP_ID}} npm start
